# academic-hub

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DASHBOARD.md  DECISIONS.md  DOMAIN_MODEL.md  PRODUCT_VISION.md
src/academic_hub/app/: main.py
src/academic_hub/enums/: origem.py  tipo_compromisso.py  urgencia.py
src/academic_hub/models/: compromisso.py  disciplina.py  frequencia.py  professor.py  semestre.py
src/academic_hub/services/: dashboard_service.py
src/academic_hub/static/css/: style.css
src/academic_hub/templates/: base.html  dashboard.html
src/academic_hub/templates/components/: navbar.html  sidebar.html
src/academic_hub/views/: dashboard_view.py
src/app/: main.py
src/models/: ]  agendaSemanal.py  compromisso.py  disciplina.py  evento.py  semestre.py
src/services/: horario_service.py
src/templates/: base.html  dashboard.html
