[project]
name = "academic-hub"
version = "0.1.0"
description = "Painel acadêmico pessoal"
requires-python = ">=3.12"

[tool.poetry]
name = "academic-hub"
version = "0.1.0"
description = "Sistema de gerenciamento acadêmico"
authors = ["Dev Matheus Chaves <matheus.costa.chaves.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
